--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "colorlog>=6.10.1",
     "fastmcp>=2.13.0.2",
     "openai>=2.6.1",
+    "python-dotenv>=1.2.1",
     "semantic-kernel>=1.36.0",
 ]
 
